--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Compiled class file
+target
 *.class
 
 # Log file
@@ -11,7 +12,6 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.nar
 *.ear
@@ -21,3 +21,8 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Javascript & Nextjs
+node_modules
+.idea
+.next
